Api de consulta de usuario y de consulta de tarjeta
